objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>RCDYP_CPCProject__c</fullName>
        <label>RCDYP CPCProject</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_CPCrole__c</fullName>
        <label>RCDYP CPCrole</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_CampaignChallengePlanning__c</fullName>
        <label>RCDYP CampaignChallengePlanning</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_CampaignPreparation__c</fullName>
        <label>RCDYP CampaignPreparation</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_CampaignSupport__c</fullName>
        <label>RCDYP CampaignSupport</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Challengeambassador__c</fullName>
        <inlineHelpText>Becoming a Challenge Ambassador</inlineHelpText>
        <label>RCDYP Challengeambassador</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCDYP_Challengelevel__c</fullName>
        <inlineHelpText>The overall level of challenge</inlineHelpText>
        <label>RCDYP Challengelevel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Commfacilitator__c</fullName>
        <inlineHelpText>Your Community Facilitator</inlineHelpText>
        <label>RCDYP Commfacilitator</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Commpartner__c</fullName>
        <inlineHelpText>Working with your Community partner</inlineHelpText>
        <label>RCDYP Commpartner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Dayvenues__c</fullName>
        <inlineHelpText>The venues you used during the day</inlineHelpText>
        <label>RCDYP Dayvenues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Dept__c</fullName>
        <label>RCDYP Dept</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Project</fullName>
                </value>
                <value>
                    <fullName>Exhibition</fullName>
                </value>
                <value>
                    <fullName>Marketing and Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCDYP_Food__c</fullName>
        <inlineHelpText>The food</inlineHelpText>
        <label>RCDYP Food</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Headstart__c</fullName>
        <inlineHelpText>Interest in HeadStart</inlineHelpText>
        <label>RCDYP Headstart</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Overallexp__c</fullName>
        <inlineHelpText>Overall Experience</inlineHelpText>
        <label>RCDYP Overallexp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Pitch__c</fullName>
        <inlineHelpText>The Pitch</inlineHelpText>
        <label>RCDYP Pitch</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Profpartner__c</fullName>
        <inlineHelpText>Working with your Professional partner</inlineHelpText>
        <label>RCDYP Profpartner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Recommendation__c</fullName>
        <inlineHelpText>Recommend to a friend</inlineHelpText>
        <label>RCDYP Recommendation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Seniormentor__c</fullName>
        <inlineHelpText>Your Senior Mentor</inlineHelpText>
        <label>RCDYP Seniormentor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_SponsorshipChallengePlanning__c</fullName>
        <label>RCDYP SponsorshipChallengePlanning</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Stepforward__c</fullName>
        <inlineHelpText>Interest in Step Forward</inlineHelpText>
        <label>RCDYP Stepforward</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Volunteering__c</fullName>
        <inlineHelpText>Volunteering in your community</inlineHelpText>
        <label>RCDYP Volunteering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCDYP_Volunteeringinterests__c</fullName>
        <inlineHelpText>Volunteering interests</inlineHelpText>
        <label>RCDYP Volunteeringinterests</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Youthboard__c</fullName>
        <inlineHelpText>Being involved with a Youth Board</inlineHelpText>
        <label>RCDYP Youthboard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCD_Staff_Rcdsessions__c</fullName>
        <label>RCDStaff Rcdsessions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCNID__c</fullName>
        <externalId>true</externalId>
        <label>TCNID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCStaff_Accommodation__c</fullName>
        <inlineHelpText>The accommodation</inlineHelpText>
        <label>TCStaff Accommodation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Commpartner__c</fullName>
        <inlineHelpText>Working with your Community partner</inlineHelpText>
        <label>TCStaff Commpartner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Corestaffsupport__c</fullName>
        <inlineHelpText>The support you have had from The Challenge&apos;s core staff.</inlineHelpText>
        <label>TCStaff Corestaffsupport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Dayvenues__c</fullName>
        <inlineHelpText>The venues you used during the day.</inlineHelpText>
        <label>TCStaff Dayvenues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Evesessions__c</fullName>
        <inlineHelpText>The evening sessions</inlineHelpText>
        <label>TCStaff Evesessions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Evesessionsmaterials__c</fullName>
        <inlineHelpText>The evening session materials</inlineHelpText>
        <label>TCStaff Evesessionsmaterials</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Food__c</fullName>
        <inlineHelpText>The food</inlineHelpText>
        <label>TCStaff Food</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Managingbehaviour__c</fullName>
        <inlineHelpText>Your confidence in managing challenging behavior</inlineHelpText>
        <label>TCStaff Managingbehaviour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Overallexp__c</fullName>
        <inlineHelpText>Overall Experience</inlineHelpText>
        <label>TCStaff Overallexp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Overallorganisation__c</fullName>
        <inlineHelpText>The overall organisation of the week</inlineHelpText>
        <label>TCStaff Overallorganisation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_PractwithYP__c</fullName>
        <inlineHelpText>The Practitioner&apos;s ability to relate to the young people</inlineHelpText>
        <label>TCStaff PractwithYP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Practwithstaff__c</fullName>
        <inlineHelpText>The Practitioner&apos;s ability to work with you</inlineHelpText>
        <label>TCStaff Practwithstaff</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Presentationday__c</fullName>
        <inlineHelpText>The Presentation Day</inlineHelpText>
        <label>TCStaff Presentationday</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Showcase__c</fullName>
        <inlineHelpText>The Showcase</inlineHelpText>
        <label>TCStaff Showcase</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Skillsequipment__c</fullName>
        <inlineHelpText>The skills equipment you worked with</inlineHelpText>
        <label>TCStaff Skillsequipment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Tcnpreparation__c</fullName>
        <inlineHelpText>How well did The Challenge prepare you for the week</inlineHelpText>
        <label>TCStaff Tcnpreparation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Transport__c</fullName>
        <inlineHelpText>The transport</inlineHelpText>
        <label>TCStaff Transport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Wavestaffsupport__c</fullName>
        <inlineHelpText>The support you have had from other staff on your wave.</inlineHelpText>
        <label>TCStaff Wavestaffsupport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCStaff_Ypchallengelevel__c</fullName>
        <inlineHelpText>The overall level of challenge for the young people</inlineHelpText>
        <label>TCStaff Ypchallengelevel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Accommodation__c</fullName>
        <inlineHelpText>The accommodation</inlineHelpText>
        <label>TCYP Accommodation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Challengelevel__c</fullName>
        <inlineHelpText>The overall level of challenge</inlineHelpText>
        <label>TCYP Challengelevel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Commpartner__c</fullName>
        <inlineHelpText>Working with your Community partner</inlineHelpText>
        <label>TCYP Commpartner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Dayvenues__c</fullName>
        <inlineHelpText>The venues you used during the day</inlineHelpText>
        <label>TCYP Dayvenues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Evesessions__c</fullName>
        <inlineHelpText>The evening sessions</inlineHelpText>
        <label>TCYP Evesessions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Food__c</fullName>
        <inlineHelpText>The food</inlineHelpText>
        <label>TCYP Food</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Freetime__c</fullName>
        <inlineHelpText>The free time</inlineHelpText>
        <label>TCYP Freetime</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Overallexp__c</fullName>
        <inlineHelpText>Overall Experience</inlineHelpText>
        <label>TCYP Overallexp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Presentationday__c</fullName>
        <inlineHelpText>The Presentation Day</inlineHelpText>
        <label>TCYP Presentationday</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Showcase__c</fullName>
        <inlineHelpText>The Showcase</inlineHelpText>
        <label>TCYP Showcase</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCYP_Skillsteacher__c</fullName>
        <inlineHelpText>The person who taught you skills</inlineHelpText>
        <label>TCYP Skillsteacher</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Number_New__c</fullName>
        <formula>IF( ISBLANK( Wave__c ),  Wave_Number_Wave_Not_Entered__c , Wave_Number_Wave_Entered__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Number_Wave_Entered__c</fullName>
        <formula>Wave__r.Wave_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave Number - Wave Entered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Number_Wave_Not_Entered__c</fullName>
        <label>Wave Number - Wave Not Entered</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Summary__c</fullName>
        <label>Wave Summary</label>
        <referenceTo>Wave_Summary__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wave</label>
        <referenceTo>Wave__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wave_number__c</fullName>
        <formula>Wave_Summary__r.Wave_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_GCSE__c</fullName>
        <label>YP_GCSE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I have not taken GCSEs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone_Wave_Entered__c</fullName>
        <formula>Wave__r.Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone - Wave Entered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Wave_Not_Entered__c</fullName>
        <label>Zone - Wave Not Entered</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>IF( ISBLANK( Wave__c),  Zone_Wave_Not_Entered__c ,Zone_Wave_Entered__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>Created_by_Tim</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Jason Balluck,Arpita Nair,Captricity LO Surveys user</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/28/2014 12:00 AM</value>
        </filters>
        <label>Created by me</label>
    </listViews>
    <listViews>
        <fullName>Have_my_surveys_been_uploaded_BC</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Have my surveys been uploaded CL</label>
    </listViews>
    <listViews>
        <fullName>Have_my_surveys_been_uploaded_EL</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>Wave_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <label>Have my surveys been uploaded EL</label>
    </listViews>
    <listViews>
        <fullName>Have_my_surveys_been_uploaded_Midlands</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Have my surveys been uploaded Midlands</label>
    </listViews>
    <listViews>
        <fullName>Have_my_surveys_been_uploaded_NW</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Have my surveys been uploaded NW</label>
    </listViews>
    <listViews>
        <fullName>Have_my_surveys_been_uploaded_WL</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Have my surveys been uploaded WL</label>
    </listViews>
    <listViews>
        <fullName>Have_my_surveys_been_uploaded_zara</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Zara</value>
        </filters>
        <label>Have my surveys been uploaded zara</label>
    </listViews>
    <listViews>
        <fullName>RCD_Mentor_surveys</fullName>
        <columns>NAME</columns>
        <columns>Wave_Summary__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.RCD_Mentor_Feedback</value>
        </filters>
        <label>RCD Mentor surveys</label>
    </listViews>
    <listViews>
        <fullName>RCD_Mentor_surveys_WS</fullName>
        <columns>NAME</columns>
        <columns>Wave_Summary__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.RCD_Mentor_Feedback</value>
        </filters>
        <label>RCD Mentor surveys WS</label>
    </listViews>
    <listViews>
        <fullName>TC_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Wave_Summary__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.TC_YP</value>
        </filters>
        <filters>
            <field>Contact_s_TCN_Id_code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>TC Surveys</label>
    </listViews>
    <listViews>
        <fullName>Tim_s_Test</fullName>
        <columns>NAME</columns>
        <columns>Wave_Summary__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.PC_YP</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2013 12:00 AM</value>
        </filters>
        <label>Tim&apos;s Test</label>
    </listViews>
    <nameField>
        <displayFormat>S-{YYYY}{MM}{00000}</displayFormat>
        <label>Survey Reference No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>Associate_Mentor_training_feedback</fullName>
        <active>true</active>
        <label>Associate Mentor training feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_SURREY_BC_RCA_Staff</fullName>
        <active>true</active>
        <label>​E.SURREY &amp; BC RCA Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_SURREY_BC_RCA_YP</fullName>
        <active>true</active>
        <label>​E.SURREY &amp; BC RCA YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ignite_Event</fullName>
        <active>true</active>
        <label>Ignite Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>MRK_RCA_Staff</fullName>
        <active>true</active>
        <label>​MRK RCA Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>MRK_RCA_YP</fullName>
        <active>true</active>
        <label>​MRK RCA YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>MRK_RCD_Staff</fullName>
        <active>true</active>
        <label>​MRK RCD Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>MRK_RCD_YP</fullName>
        <active>true</active>
        <label>​MRK RCD YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCKO_Staff</fullName>
        <active>true</active>
        <description>Personal Challenge Kick Off Staff</description>
        <label>PCKO Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCKO_Type_A</fullName>
        <active>true</active>
        <label>PCKO Type A</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCKO_Type_B</fullName>
        <active>true</active>
        <label>PCKO Type B</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCKO_YP</fullName>
        <active>true</active>
        <description>Personal Challenge Kick Off Young Person</description>
        <label>PCKO YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Staff</fullName>
        <active>true</active>
        <description>Personal Challenge Staff</description>
        <label>PC Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_YP</fullName>
        <active>true</active>
        <description>Personal Challenge Young Person</description>
        <label>PC YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCA_Pilot_Staff</fullName>
        <active>true</active>
        <label>RCA Pilot Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCA_Pilot_YP</fullName>
        <active>true</active>
        <label>RCA Pilot YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCA_Staff</fullName>
        <active>true</active>
        <description>Real Challenge Action Staff</description>
        <label>RCA Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCA_YP</fullName>
        <active>true</active>
        <description>Real Challenge Action Young Person</description>
        <label>RCA YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCD_AM</fullName>
        <active>true</active>
        <description>Survey record type for Associate Mentor surveys</description>
        <label>RCD AM</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCD_Mentor_Feedback</fullName>
        <active>true</active>
        <label>RCD Mentor Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCD_Staff</fullName>
        <active>true</active>
        <description>Real Challenge Design Staff</description>
        <label>RCD Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCD_YP</fullName>
        <active>true</active>
        <description>The Real Challenge Design Young Person</description>
        <label>RCD YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCSKO_YP</fullName>
        <active>true</active>
        <label>TCSKO YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS_event_Partners</fullName>
        <active>true</active>
        <label>TCS event Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS_event_Staff</fullName>
        <active>true</active>
        <label>TCS event Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS_event_YP</fullName>
        <active>true</active>
        <label>TCS event YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_Pilot_Staff</fullName>
        <active>true</active>
        <label>TC Pilot Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_Pilot_YP</fullName>
        <active>true</active>
        <label>TC Pilot YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_RCD_Staff_NEW</fullName>
        <active>true</active>
        <label>TC/RCD Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_RCD_YP_NEW</fullName>
        <active>true</active>
        <label>TC/RCD YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_Staff</fullName>
        <active>true</active>
        <description>Team Challenge Staff</description>
        <label>TC Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_YP</fullName>
        <active>true</active>
        <description>Team Challenge Young Person</description>
        <label>TC YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>WHR_RCD_Staff</fullName>
        <active>true</active>
        <label>​WHR RCD Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>WHR_RCD_YP</fullName>
        <active>true</active>
        <label>​WHR RCD YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>YB_Baseline</fullName>
        <active>true</active>
        <description>This survey monitors the baseline rating of the YB sessions</description>
        <label>YB Baseline</label>
    </recordTypes>
    <recordTypes>
        <fullName>YB_Session</fullName>
        <active>true</active>
        <description>This Survey gives the feedback on the individual YB session</description>
        <label>YB Session</label>
    </recordTypes>
    <recordTypes>
        <fullName>YP</fullName>
        <active>true</active>
        <label>YP</label>
    </recordTypes>
    <recordTypes>
        <fullName>YP_RCA_NCS</fullName>
        <active>true</active>
        <label>YP RCA NCS</label>
    </recordTypes>
    <recordTypes>
        <fullName>YP_RCA_TCN</fullName>
        <active>true</active>
        <label>YP RCA TCN</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>